# src/routes/employee.routes.js
@@ -5,6 +5,10 @@ const router = Router();
 
 router.get("/id", employeeController.getEmployeeIdByToken);
 router.get(
+  "/internal/id/:userId",
+  employeeController.getEmployeeDepartmentContextByUserId
+);
+router.get(
   "/department-manager",
   employeeController.getDepartmentManagerByEmployee
 );
